--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ pip==23.1.2
 numpy
 pandas
 scikit-learn
-spacy
+spacy==3.1.0
 spacy-lookups-data
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz
 torch
 transformers
 streamlit
